# mijn-json-kleurkrijt

./: .gitignore  .gitmodules  ANALYSE_PYBIND11.md  ANALYSE_PYBIND11_FINAAL.md  CHANGELOG.md  CMakeLists.txt  README.md  colored_json.pyi  demo_wjq.ps1  pyproject.toml  requirements.txt  setup.py  test_json_string.py
examples/: demo.py  html_export_demo.py  individual_colors_demo.py  markdown_export_demo.py  quote_colors_demo.py
research/: GIL_RELEASE_ANALYSE.md  JSON_STRING_IMPLEMENTATIE_PLAN.md  JSON_STRING_INPUT_ANALYSE.md  json_color_research.md
src/: bindings.cpp  color.hpp  html_printer.hpp  json_parser.hpp  markdown_printer.hpp  printer.hpp  style.hpp
tests/: test_colored_json.py
wjq/: .clangd  CMakeLists.txt  README.md
wjq/src/: json_parser.hpp  main.cpp  printer.hpp  style.hpp
wjq/tests/: run_tests.ps1  simple_test.ps1
wjq/tests/data/: array.json  mixed.jsonl  simple.json
